[gd_scene load_steps=2 format=3 uid="uid://by4hv4xrjwvfl"]

[ext_resource type="Script" path="res://SentenceCompletion.gd" id="1_0x8jq"]

[node name="SentenceCompletion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8jq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.827, 0.827, 0.827, 1)

[node name="HeaderContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 140.0

[node name="TitleSection" type="VBoxContainer" parent="HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="HeaderContainer/TitleSection"]
layout_mode = 2
text = "Spanish Verb Conjugation Game"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="VerbLabel" type="Label" parent="HeaderContainer/TitleSection"]
layout_mode = 2
text = "Match the conjugation with the correct sentence for Hablar"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)

[node name="PreviousScoreLabel" type="Label" parent="HeaderContainer/TitleSection"]
layout_mode = 2
text = "Previous Score: 0"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)

[node name="GameModeSelector" type="HBoxContainer" parent="HeaderContainer/TitleSection"]
layout_mode = 2
alignment = 1

[node name="EnglishPronounModeButton" type="Button" parent="HeaderContainer/TitleSection/GameModeSelector"]
layout_mode = 2
text = "Level 1-1: English Pronouns"
toggle_mode = true

[node name="SpanishPronounModeButton" type="Button" parent="HeaderContainer/TitleSection/GameModeSelector"]
layout_mode = 2
text = "Level 1-2: Spanish Pronouns"
toggle_mode = true

[node name="SentenceModeButton" type="Button" parent="HeaderContainer/TitleSection/GameModeSelector"]
layout_mode = 2
text = "Level 3: Sentence Completion"
toggle_mode = true
button_pressed = true

[node name="ProgressIndicator" type="Control" parent="HeaderContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="Background" type="ColorRect" parent="HeaderContainer/ProgressIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="HeaderContainer/ProgressIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ProgressTitle" type="Label" parent="HeaderContainer/ProgressIndicator/VBoxContainer"]
layout_mode = 2
text = "Progress"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HSeparator" type="HSeparator" parent="HeaderContainer/ProgressIndicator/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="HeaderContainer/ProgressIndicator/VBoxContainer"]
layout_mode = 2

[node name="LeftColumn" type="VBoxContainer" parent="HeaderContainer/ProgressIndicator/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentVerbLabel" type="Label" parent="HeaderContainer/ProgressIndicator/VBoxContainer/ContentContainer/LeftColumn"]
layout_mode = 2
text = "Current: Hablar"
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)

[node name="VerbsCompletedLabel" type="Label" parent="HeaderContainer/ProgressIndicator/VBoxContainer/ContentContainer/LeftColumn"]
layout_mode = 2
text = "Completed: 0/3"
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)

[node name="RightColumn" type="VBoxContainer" parent="HeaderContainer/ProgressIndicator/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VerbEndingLabel" type="Label" parent="HeaderContainer/ProgressIndicator/VBoxContainer/ContentContainer/RightColumn"]
layout_mode = 2
text = "Ending: -ar"
theme_override_colors/font_color = Color(1, 1, 0.8, 1)

[node name="TotalErrorsLabel" type="Label" parent="HeaderContainer/ProgressIndicator/VBoxContainer/ContentContainer/RightColumn"]
layout_mode = 2
text = "Total Errors: 0"
theme_override_colors/font_color = Color(1, 0.9, 0.8, 1)

[node name="TopHSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_top = 140.0
offset_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 150.0
offset_right = -50.0
offset_bottom = -50.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GameArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConjugationSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConjugationLabel" type="Label" parent="VBoxContainer/GameArea/ConjugationSection"]
layout_mode = 2
text = "Conjugation"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="ConjugationDisplay" type="Button" parent="VBoxContainer/GameArea/ConjugationSection"]
layout_mode = 2
custom_minimum_size = Vector2(200, 100)
text = "hablo"
disabled = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/GameArea"]
layout_mode = 2

[node name="SentenceSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SentenceLabel" type="Label" parent="VBoxContainer/GameArea/SentenceSection"]
layout_mode = 2
text = "Choose the correct sentence"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)

[node name="SentenceGrid" type="GridContainer" parent="VBoxContainer/GameArea/SentenceSection"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="sentence_yo" type="Button" parent="VBoxContainer/GameArea/SentenceSection/SentenceGrid"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
text = "___ hablo español"

[node name="sentence_tu" type="Button" parent="VBoxContainer/GameArea/SentenceSection/SentenceGrid"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
text = "¿___ hablas inglés?"

[node name="sentence_el" type="Button" parent="VBoxContainer/GameArea/SentenceSection/SentenceGrid"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
text = "___ habla francés"

[node name="sentence_nosotros" type="Button" parent="VBoxContainer/GameArea/SentenceSection/SentenceGrid"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
text = "___ hablamos mucho"

[node name="sentence_vosotros" type="Button" parent="VBoxContainer/GameArea/SentenceSection/SentenceGrid"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
text = "¿___ habláis italiano?"

[node name="sentence_ellos" type="Button" parent="VBoxContainer/GameArea/SentenceSection/SentenceGrid"]
layout_mode = 2
custom_minimum_size = Vector2(250, 60)
text = "___ hablan chino"

[node name="Popup" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
visible = false

[node name="Background" type="ColorRect" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Label" type="Label" parent="Popup/VBoxContainer"]
layout_mode = 2
text = "Good Job!"
horizontal_alignment = 1
vertical_alignment = 1
